styles.css
.contribution-graph {
	margin-bottom: 6px;
	position: relative;
}

.contribution-graph .center {
	justify-content: center;
	text-align: center;
}

.contribution-graph .main {
	overflow-x: auto;
	padding: 2px;
	line-height: normal;
	display: grid;
	margin-top: 20px;
	overflow-x: hidden;
	justify-content: center;
}

.contribution-graph .main.fill-the-screen {
	justify-content: normal;
}

.contribution-graph .main:hover {
	overflow-x: auto;
}

.contribution-graph .main .title {
	font-size: 14px;
	margin-bottom: 36px;
	justify-content: flex-start;
}

.contribution-graph .main .charts {
	width: 100%;
	display: flex;
}

.contribution-graph .main .charts .column {
	position: relative;
	display: flex;
	flex-direction: column;
	flex-grow: 1;
}

.contribution-graph .main .charts .row {
	position: relative;
	display: flex;
	flex-direction: row;
	flex-grow: 1;
	align-items: flex-start;
	justify-content: space-between;
	margin-bottom: 6px;
	width: 100%;
}

/**
*  default charts
*/
.contribution-graph .main .charts.default {
	flex-direction: row;
	align-items: flex-start;
	flex-wrap: nowrap;
	justify-content: center;
}

.contribution-graph .main .charts.default .column {
	/* override default flex-grow */
	flex-grow: 0;
}

.contribution-graph .fill-the-screen.main .charts.default .column {
	flex-grow: 1;
}

.contribution-graph .default .week-indicator {
	background-color: transparent;
	font-size: 10px;
	min-width: 18px;
	text-wrap: nowrap;
	height: 8px;
	margin-right: 8px;
	margin-top: 1.5px;
	text-align: center;
	cursor: pointer;
}

.contribution-graph .default .month-indicator {
	position: absolute;
	top: -24px;
	text-wrap: nowrap;
	font-size: 10px;
	min-width: 20px;
	cursor: pointer;
}

/**
* month-track charts
*/
.contribution-graph .main .charts.month-track {
	flex-direction: column;
	align-items: center;
	padding-right: 12px;
	width: 100%;
}

.contribution-graph .month-track .date-indicator {
	min-width: 15px;
	min-height: 15px;
	font-size: 8px;
	width: auto;
	border-radius: 2px;
	margin-right: 2px;
	flex-grow: 1;
}

.contribution-graph .main .charts.month-track .row {
	width: auto;
	align-items: flex-start;
	margin-bottom: 8px;
	gap: 1px;
}

.contribution-graph .fill-the-screen.main .charts.month-track .row {
	width: 100%;
}

.contribution-graph .month-track .cell {
	min-height: 13px;
	min-width: 13px;
	font-size: 10px;
	border-radius: 3px;
}

@media (max-width: 720px) {
	.contribution-graph .month-track .cell {
		height: 10px;
		min-height: 10px;
		min-width: 10px;
		font-size: 10px;
		border-radius: 3px;
	}
}

.contribution-graph .month-track .month-indicator {
	background-color: transparent;
	font-size: 12px;
	height: 22px;
	width: 88px;
	margin-right: 12px;
	text-align: right;
	cursor: pointer;
	top: auto;
	position: relative;
	color: var(--text-normal);
}

/* calendar charts */
.contribution-graph .calendar {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	padding: 12px;
}

.contribution-graph .calendar .month-container {
	min-width: calc(25% - 12px);
	margin-right: 12px;
	margin-bottom: 12px;
	padding: 6px;
	position: relative;
	border: 1px solid var(--background-modifier-border);
	border-radius: 6px;
	justify-content: space-between;
}

@media (max-width: 720px) {
	.contribution-graph .calendar .month-container {
		width: calc(50% - 12px);
		margin-right: 12px;
		margin-bottom: 12px;
		padding: 6px;
		position: relative;
		border: 1px solid var(--background-modifier-border);
		border-radius: 6px;
	}
}

@media (max-width: 480px) {
	.contribution-graph .calendar .month-container {
		width: calc(100% - 12px);
		margin-right: 12px;
		margin-bottom: 12px;
		padding: 6px;
		position: relative;
		border: 1px solid var(--background-modifier-border);
		border-radius: 6px;
	}
}

.contribution-graph .calendar .month-container:hover {
	border: 1px solid var(--background-modifier-border-hover);
	background-color: rgba(244, 244, 244, 0.6);
}

.theme-dark .contribution-graph .calendar .month-container:hover {
	border: 1px solid var(--background-modifier-border-hover);
	background-color: rgba(37, 35, 35, 0.3);
}

.contribution-graph .calendar .month-container .month-indicator {
	width: 100%;
	text-align: center;
	cursor: pointer;
	color: var(--text-normal);
}

.contribution-graph .calendar .month-container .month-indicator:hover {
	opacity: 0.6;
}

.contribution-graph .calendar .month-container .week-indicator-container {
	margin-top: 12px;
}

.contribution-graph
	.calendar
	.month-container
	.week-indicator-container
	.week-indicator {
	font-size: 10px;
	line-height: 1.5;
	text-align: center;
	color: var(--text-muted);
}

.contribution-graph .calendar .month-container .cell {
	width: auto;
	min-height: 18px;
	min-width: 18px;
	font-size: 10px;
	border-radius: 3px;
}

/* default cell */
.contribution-graph .cell {
	min-width: 8.8px;
	min-height: 8.8px;
	height: 8.8px;
	font-size: 8px;
	border-radius: 2px;
	background-color: transparent;
	margin-top: 2px;
	margin-right: 2px;
	flex-grow: 1;
	cursor: pointer;
	position: relative;
	text-align: center;
}

.contribution-graph .cell:hover {
	opacity: 0.6;
}

.contribution-graph .cell.empty {
	background-color: #ebedf0;
}

.theme-dark .contribution-graph .cell.empty {
	background: #333;
}

/* default cell rule indicator */
.contribution-graph .cell-rule-indicator-container {
	position: relative;
	width: calc(100% - 12px);
	display: flex;
	flex-direction: row;
	justify-content: flex-end;
	align-items: center;
	margin-top: 12px;
	margin-bottom: 6px;
}

.contribution-graph .cell-rule-indicator-container .cell {
	max-width: 12px;
	width: 10px;
	height: 10px;
	text-align: center;
}

.contribution-graph .cell-rule-indicator-container .cell.text {
	height: 8px;
	width: auto;
	min-width: 20px;
	margin-left: 6px;
	margin-right: 6px;
	color: var(--text-muted);
}

/* default error tips */
.contribution-graph-render-error-container {
	background-color: var(--background-secondary);
	padding: 6px;
	min-height: 12px;
	border-radius: 6px;
}
/* ... */

